Mon Mar 15 20:39:21 GMT 2004  Olly Betts <olly@survex.com>

	* tests/quartztest.cc: Fail the test if there's still a directory after
	  rmdir(), or there isn't a directory after mkdir().  Close a
	  QuartzDatabase or QuartzWritableDatabase before trying to overwrite
	  it - cygwin doesn't allow use to delete open/locked files...

Mon Mar 15 20:38:11 GMT 2004  Olly Betts <olly@survex.com>

	* backends/database.cc: Database::Internal::Internal::keep_alive()
	  should be Database::Internal::keep_alive().

Mon Mar 15 17:20:58 GMT 2004  Olly Betts <olly@survex.com>

	* include/xapian/base.h: Returning a void result makes SGI's compiler
	  complain - don't!

Mon Mar 15 14:34:44 GMT 2004  Olly Betts <olly@survex.com>

	* common/omdebug.cc: Only use O_SYNC (on the debug log) if we have it.

Sun Mar 14 17:48:52 GMT 2004  Olly Betts <olly@survex.com>

	* tests/runtest.in: Mark with @configure_input@.

Thu Mar 11 23:53:43 GMT 2004  Olly Betts <olly@survex.com>

	* common/database.h,common/termlist.h,include/xapian/database.h,
	  include/xapian/enquire.h: Attempted fixes for warnings given by
	  SGI's MIPSpro C++ compiler.

Thu Mar 11 23:51:10 GMT 2004  Olly Betts <olly@survex.com>

	* configure.in: GCC 2.95 supported -Wno-long-long and is our minimum
	  recommended version, so unconditionally use -Wno-long-long with
	  GCC, and don't test for it on other compilers (the test incorrectly
	  decided to use it with SGI's compiler leading to a warning for
	  every file compiled).

Thu Mar 11 17:29:24 GMT 2004  Olly Betts <olly@survex.com>

	* docs/intro_ir.html: Added a link to "Information Retrieval"
	  by Keith v.R. which can be read on his website!

Thu Mar 11 17:12:35 GMT 2004  Olly Betts <olly@survex.com>

	* PLATFORMS: Added IRIX success reports from Jim Lynch.

Thu Mar 11 12:17:21 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc: Fixes for Sun C++'s fussy
	  template matching.

Thu Mar 11 12:12:46 GMT 2004  Olly Betts <olly@survex.com>
